(v2) FrameGirdCanvas: get the frame labels from the provider.